Further Cleaned up MPE Scatter Spawns.

--- a/MPE/ParallaxTerrain_Continued.cfg
+++ b/MPE/ParallaxTerrain_Continued.cfg
@@ -174,20 +174,20 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepMidpoint = 0.731000006
 			_DisplacementScale = 0.0700000003
 			_DisplacementOffset = 0.0109999999
-			_SpecularIntensity = 0.5
-			_SpecularPower = 60
+			_SpecularIntensity = 0.3
+			_SpecularPower = 10
 			_EnvironmentMapFactor = 0.1
 			_Hapke = 0.430000007
-			_EmissionColor = 0,0,0,1
-			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-			_FresnelPower = 5
-			_BumpScale = 1.5
+			_EmissionColor = 0.05,0.05,0.05,1
+			_FresnelColor = 0.1,0.1,0.1,1
+			_FresnelPower = 2
+			_BumpScale = 2.5
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -10000
 			_LowMidBlendEnd = -10001
 			_MidHighBlendStart = 90002
 			_MidHighBlendEnd = 90003
-			_Tiling = 0.0666666701
+			_Tiling = 0.08
 		}
 	}
 	Body
@@ -478,20 +478,20 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 			_SteepMidpoint = 0.731000006
 			_DisplacementScale = 0.0700000003
 			_DisplacementOffset = 0.0109999999
-			_SpecularIntensity = 0.300000012
-			_SpecularPower = 15
-			_EnvironmentMapFactor = 0.5
+			_SpecularIntensity = 2.5
+			_SpecularPower = 50
+			_EnvironmentMapFactor = 0.9
 			_Hapke = 0.800000012
-			_EmissionColor = 0,0,0,1
-			_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-			_FresnelPower = 4
-			_BumpScale = 1
+			_EmissionColor = 0.1,0.1,0.1,1
+			_FresnelColor = 0.4,0.4,0.4,1
+			_FresnelPower = 5
+			_BumpScale = 2
 			_RefractionIntensity = 0
 			_LowMidBlendStart = -10000
 			_LowMidBlendEnd = -10001
 			_MidHighBlendStart = 90002
 			_MidHighBlendEnd = 90003
-			_Tiling = 0.0466666669
+			_Tiling = 0.05
 		}
 	}
 	Body
