--- a/MPE/_Scatters/Configs_C/Edas.cfg
+++ b/MPE/_Scatters/Configs_C/Edas.cfg
@@ -60,7 +60,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.3
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -146,7 +146,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.16
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
