--- a/MPE/_Scatters/Configs_C/Kal.cfg
+++ b/MPE/_Scatters/Configs_C/Kal.cfg
@@ -52,15 +52,15 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 0.3
 				spawnChance = 0.9
 				range = 150
-				populationMultiplier = 5
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 4
+				minScale = 0.100, 0.100, 0.100
+				maxScale = 0.400, 0.400, 0.400
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.9
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.43
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -136,9 +136,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 1
-				spawnChance = 0.9
+				spawnChance = 0.7
 				range = 150
-				populationMultiplier = 4
+				populationMultiplier = 2
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -146,7 +146,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.9
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.43
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -222,7 +222,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 2.8
-				spawnChance = 0.45
+				spawnChance = 0.35
 				range = 650
 				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
@@ -308,9 +308,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 1
+				spawnChance = 0.4
 				range = 900
-				populationMultiplier = 2
+				populationMultiplier = 1
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -318,7 +318,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.9
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.32
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -394,7 +394,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 7
-				spawnChance = 0.5
+				spawnChance = 0.25
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
@@ -404,7 +404,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.9
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.16
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -479,10 +479,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 8
-				spawnChance = 0.4
+				seed = 8.5
+				spawnChance = 0.2
 				range = 2000
-				populationMultiplier = 4
+				populationMultiplier = 2
 				minScale = 0.4,0.4,0.4
 				maxScale = 0.8,0.8,0.8
 				scaleRandomness = 0.5
@@ -490,7 +490,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.9
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.16
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -566,7 +566,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.3
+				spawnChance = 0.2
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
@@ -576,7 +576,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.9
-				maxNormalDeviance = 0.13
+				maxNormalDeviance = 0.16
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
