--- a/MPE/_Scatters/Configs_C/KiKi.cfg
+++ b/MPE/_Scatters/Configs_C/KiKi.cfg
@@ -52,7 +52,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 0.3
 				spawnChance = 1
 				range = 150
-				populationMultiplier = 5
+				populationMultiplier = 52
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -138,9 +138,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				seed = 12
 				spawnChance = 1
 				range = 150
-				populationMultiplier = 3
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 52
+				minScale = 0.100, 0.100, 0.100
+				maxScale = 0.400, 0.400, 0.400
 				scaleRandomness = 0.5
 				cutoffScale = 0.01
 				steepPower = 0.001
@@ -222,9 +222,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 3.25
-				spawnChance = 0.75
+				spawnChance = 1
 				range = 650
-				populationMultiplier = 1
+				populationMultiplier = 4
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -307,10 +307,10 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 5
-				spawnChance = 0.75
+				seed = 5.3
+				spawnChance = 1
 				range = 900
-				populationMultiplier = 1
+				populationMultiplier = 2
 				minScale = 0.3,0.3,0.3
 				maxScale = 0.6,0.6,0.6
 				scaleRandomness = 0.5
@@ -393,8 +393,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 7
-				spawnChance = 0.5
+				seed = 7.8
+				spawnChance = 1
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
@@ -479,7 +479,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 5
+				seed = 5.989
 				spawnChance = 0.35
 				range = 2000
 				populationMultiplier = 3
@@ -566,7 +566,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.3
+				spawnChance = 0.5
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.4,0.4,0.4
