--- a/MPE/_Scatters/Configs_C/Flake.cfg
+++ b/MPE/_Scatters/Configs_C/Flake.cfg
@@ -62,7 +62,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.43
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -150,7 +150,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.43
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -228,7 +228,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 7
-				spawnChance = 0.25
+				spawnChance = 0.1
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -238,7 +238,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.32
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -316,17 +316,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.02
+				spawnChance = 0.002
 				range = 2000
 				populationMultiplier = 1
-				minScale = 0.75,0.75,0.75
-				maxScale = 1,1,1
+				minScale = 0.7,0.7,0.7
+				maxScale = 0.95,0.95,0.95
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
 				steepPower = 0.00100000005
 				steepContrast = 4.5
 				steepMidpoint = 0.699999988
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.18
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -401,7 +401,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			}
 			Distribution
 			{
-				seed = 72
+				seed = 72.1
 				spawnChance = 0.05
 				range = 600
 				populationMultiplier = 1
@@ -412,7 +412,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.43
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -488,7 +488,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 3
-				spawnChance = 0.05
+				spawnChance = 0.02
 				range = 1650
 				populationMultiplier = 1
 				minScale = 1,1,1
@@ -498,7 +498,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.18
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -574,7 +574,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.05
+				spawnChance = 0.01
 				range = 1650
 				populationMultiplier = 1
 				minScale = 1,1,1
@@ -584,7 +584,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.32
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -660,17 +660,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 4
-				spawnChance = 0.0500000007
+				spawnChance = 0.02
 				range = 2000
 				populationMultiplier = 1
 				minScale = 1,1,1
-				maxScale = 3,3,3
+				maxScale = 2,2,2
 				scaleRandomness = 0.5
 				cutoffScale = 0.400000006
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.14
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -746,7 +746,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.01
+				spawnChance = 0.001
 				range = 2500
 				populationMultiplier = 1
 				minScale = 1,1,1
@@ -756,7 +756,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.14
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -832,7 +832,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 54
-				spawnChance = 1
+				spawnChance = 0.5
 				range = 150
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
@@ -842,7 +842,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.43
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -918,7 +918,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 52
-				spawnChance = 0.2
+				spawnChance = 0.1
 				range = 1100
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -928,7 +928,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.32
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -1004,7 +1004,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.2
+				spawnChance = 0.04
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.200000003,0.200000003,0.200000003
@@ -1014,7 +1014,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.129999995
+				maxNormalDeviance = 0.18
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
