Further MPE Adjustments.

--- a/MPE/ParallaxTerrain_Continued.cfg
+++ b/MPE/ParallaxTerrain_Continued.cfg
@@ -1,4 +1,4 @@
-ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
+ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures,MPE]
 {
 	Body
 	{
@@ -155,7 +155,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 	Body
 	{
 		name = Crokslev
-		emissive = False
+		emissive = True
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/Regolith_Diff.dds
@@ -193,7 +193,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 	Body
 	{
 		name = Geito
-		emissive = False
+		emissive = True
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/SnowFluffy_Diff.dds
@@ -383,7 +383,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 	Body
 	{
 		name = Flake
-		emissive = False
+		emissive = True
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/SnowFluffy_Diff.dds
@@ -459,7 +459,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 	Body
 	{
 		name = Archae
-		emissive = False
+		emissive = True
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/IceRough_Diff.dds
@@ -497,7 +497,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 	Body
 	{
 		name = Soden
-		emissive = False
+		emissive = True
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/SnowWavy_Soden_Diff.dds
@@ -535,7 +535,7 @@ ParallaxTerrain:NEEDS[Parallax_StockTerrainTextures]
 	Body
 	{
 		name = Lon
-		emissive = False
+		emissive = True
 		ShaderProperties
 		{
 			_MainTexLow = OuterParallax/Textures/IceRough_Diff.dds
