--- a/MPE/_Configs/IncreaseSubdivisionCount_2.cfg
+++ b/MPE/_Configs/IncreaseSubdivisionCount_2.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTextures]
+@Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTextures,MPE]
 {
     @Body[Edas]
     {
