--- a/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTerrainTextures]
+@Kopernicus:AFTER[MPE]:NEEDS[Parallax_StockTerrainTextures,MPE]
 {
     @Body[Edas]
     {
